// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`getComponentCss() > should return correct css for size: "inherit", align: center, color: primary, ellipsis: false and theme: light 1`] = `
":host {
  display: block;
  color-scheme: light dark !important;
}
:host([hidden]) {
  display: none !important;
}
::slotted(:is(h1,h2,h3,h4,h5,h6)) {
  all: unset !important;
}
.root {
  margin: 0;
  padding: 0;
  font: normal normal 400 clamp(2.28rem, 5.2vw + 1.24rem, 7.48rem)/calc(6px + 2.125ex) 'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif;
  color: #010205;
  text-align: center;
  letter-spacing: normal;
  list-style-type: none;
  white-space: inherit;
  font-size: inherit;
}"
`;

exports[`getComponentCss() > should return correct css for size: "large", align: center, color: primary, ellipsis: false and theme: dark 1`] = `
":host {
  display: block;
  color-scheme: light dark !important;
}
:host([hidden]) {
  display: none !important;
}
::slotted(:is(h1,h2,h3,h4,h5,h6)) {
  all: unset !important;
}
.root {
  margin: 0;
  padding: 0;
  font: normal normal 400 clamp(2.28rem, 5.2vw + 1.24rem, 7.48rem)/calc(6px + 2.125ex) 'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif;
  color: #FBFCFF;
  text-align: center;
  letter-spacing: normal;
  list-style-type: none;
  white-space: inherit;
  font-size: clamp(2.28rem, 5.2vw + 1.24rem, 7.48rem);
}"
`;

exports[`getComponentCss() > should return correct css for size: "large", align: end, color: primary, ellipsis: true and theme: dark 1`] = `
":host {
  display: block;
  color-scheme: light dark !important;
}
:host([hidden]) {
  display: none !important;
}
::slotted(:is(h1,h2,h3,h4,h5,h6)) {
  all: unset !important;
}
.root {
  margin: 0;
  padding: 0;
  font: normal normal 400 clamp(2.28rem, 5.2vw + 1.24rem, 7.48rem)/calc(6px + 2.125ex) 'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif;
  color: #FBFCFF;
  text-align: end;
  letter-spacing: normal;
  list-style-type: none;
  white-space: nowrap;
  max-width: 100%;
  overflow: hidden;
  text-overflow: ellipsis;
  font-size: clamp(2.28rem, 5.2vw + 1.24rem, 7.48rem);
}"
`;

exports[`getComponentCss() > should return correct css for size: "large", align: left, color: primary, ellipsis: false and theme: light 1`] = `
":host {
  display: block;
  color-scheme: light dark !important;
}
:host([hidden]) {
  display: none !important;
}
::slotted(:is(h1,h2,h3,h4,h5,h6)) {
  all: unset !important;
}
.root {
  margin: 0;
  padding: 0;
  font: normal normal 400 clamp(2.28rem, 5.2vw + 1.24rem, 7.48rem)/calc(6px + 2.125ex) 'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif;
  color: #010205;
  text-align: left;
  letter-spacing: normal;
  list-style-type: none;
  white-space: inherit;
  font-size: clamp(2.28rem, 5.2vw + 1.24rem, 7.48rem);
}"
`;

exports[`getComponentCss() > should return correct css for size: "large", align: right, color: primary, ellipsis: false and theme: light 1`] = `
":host {
  display: block;
  color-scheme: light dark !important;
}
:host([hidden]) {
  display: none !important;
}
::slotted(:is(h1,h2,h3,h4,h5,h6)) {
  all: unset !important;
}
.root {
  margin: 0;
  padding: 0;
  font: normal normal 400 clamp(2.28rem, 5.2vw + 1.24rem, 7.48rem)/calc(6px + 2.125ex) 'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif;
  color: #010205;
  text-align: right;
  letter-spacing: normal;
  list-style-type: none;
  white-space: inherit;
  font-size: clamp(2.28rem, 5.2vw + 1.24rem, 7.48rem);
}"
`;

exports[`getComponentCss() > should return correct css for size: "large", align: start, color: primary, ellipsis: false and theme: light 1`] = `
":host {
  display: block;
  color-scheme: light dark !important;
}
:host([hidden]) {
  display: none !important;
}
::slotted(:is(h1,h2,h3,h4,h5,h6)) {
  all: unset !important;
}
.root {
  margin: 0;
  padding: 0;
  font: normal normal 400 clamp(2.28rem, 5.2vw + 1.24rem, 7.48rem)/calc(6px + 2.125ex) 'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif;
  color: #010205;
  text-align: start;
  letter-spacing: normal;
  list-style-type: none;
  white-space: inherit;
  font-size: clamp(2.28rem, 5.2vw + 1.24rem, 7.48rem);
}"
`;

exports[`getComponentCss() > should return correct css for size: "large", align: start, color: primary, ellipsis: false and theme: light 2`] = `
":host {
  display: block;
  color-scheme: light dark !important;
}
:host([hidden]) {
  display: none !important;
}
::slotted(:is(h1,h2,h3,h4,h5,h6)) {
  all: unset !important;
}
.root {
  margin: 0;
  padding: 0;
  font: normal normal 400 clamp(2.28rem, 5.2vw + 1.24rem, 7.48rem)/calc(6px + 2.125ex) 'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif;
  color: #010205;
  text-align: start;
  letter-spacing: normal;
  list-style-type: none;
  white-space: inherit;
  font-size: clamp(2.28rem, 5.2vw + 1.24rem, 7.48rem);
}"
`;

exports[`getComponentCss() > should return correct css for size: "large", align: start, color: primary, ellipsis: true and theme: light 1`] = `
":host {
  display: block;
  color-scheme: light dark !important;
}
:host([hidden]) {
  display: none !important;
}
::slotted(:is(h1,h2,h3,h4,h5,h6)) {
  all: unset !important;
}
.root {
  margin: 0;
  padding: 0;
  font: normal normal 400 clamp(2.28rem, 5.2vw + 1.24rem, 7.48rem)/calc(6px + 2.125ex) 'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif;
  color: #010205;
  text-align: start;
  letter-spacing: normal;
  list-style-type: none;
  white-space: nowrap;
  max-width: 100%;
  overflow: hidden;
  text-overflow: ellipsis;
  font-size: clamp(2.28rem, 5.2vw + 1.24rem, 7.48rem);
}"
`;

exports[`getComponentCss() > should return correct css for size: "large", align: start, color: primary, ellipsis: true and theme: light 2`] = `
":host {
  display: block;
  color-scheme: light dark !important;
}
:host([hidden]) {
  display: none !important;
}
::slotted(:is(h1,h2,h3,h4,h5,h6)) {
  all: unset !important;
}
.root {
  margin: 0;
  padding: 0;
  font: normal normal 400 clamp(2.28rem, 5.2vw + 1.24rem, 7.48rem)/calc(6px + 2.125ex) 'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif;
  color: #010205;
  text-align: start;
  letter-spacing: normal;
  list-style-type: none;
  white-space: nowrap;
  max-width: 100%;
  overflow: hidden;
  text-overflow: ellipsis;
  font-size: clamp(2.28rem, 5.2vw + 1.24rem, 7.48rem);
}"
`;

exports[`getComponentCss() > should return correct css for size: "medium", align: end, color: inherit, ellipsis: true and theme: dark 1`] = `
":host {
  display: block;
  color-scheme: light dark !important;
}
:host([hidden]) {
  display: none !important;
}
::slotted(:is(h1,h2,h3,h4,h5,h6)) {
  all: unset !important;
}
.root {
  margin: 0;
  padding: 0;
  font: normal normal 400 clamp(2.28rem, 5.2vw + 1.24rem, 7.48rem)/calc(6px + 2.125ex) 'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif;
  color: currentColor;
  text-align: end;
  letter-spacing: normal;
  list-style-type: none;
  white-space: nowrap;
  max-width: 100%;
  overflow: hidden;
  text-overflow: ellipsis;
  font-size: clamp(2.03rem, 3.58vw + 1.31rem, 5.61rem);
}"
`;

exports[`getComponentCss() > should return correct css for size: "medium", align: start, color: inherit, ellipsis: false and theme: light 1`] = `
":host {
  display: block;
  color-scheme: light dark !important;
}
:host([hidden]) {
  display: none !important;
}
::slotted(:is(h1,h2,h3,h4,h5,h6)) {
  all: unset !important;
}
.root {
  margin: 0;
  padding: 0;
  font: normal normal 400 clamp(2.28rem, 5.2vw + 1.24rem, 7.48rem)/calc(6px + 2.125ex) 'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif;
  color: currentColor;
  text-align: start;
  letter-spacing: normal;
  list-style-type: none;
  white-space: inherit;
  font-size: clamp(2.03rem, 3.58vw + 1.31rem, 5.61rem);
}"
`;

exports[`getComponentCss() > should return correct css for size: "small", align: end, color: inherit, ellipsis: true and theme: dark 1`] = `
":host {
  display: block;
  color-scheme: light dark !important;
}
:host([hidden]) {
  display: none !important;
}
::slotted(:is(h1,h2,h3,h4,h5,h6)) {
  all: unset !important;
}
.root {
  margin: 0;
  padding: 0;
  font: normal normal 400 clamp(2.28rem, 5.2vw + 1.24rem, 7.48rem)/calc(6px + 2.125ex) 'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif;
  color: currentColor;
  text-align: end;
  letter-spacing: normal;
  list-style-type: none;
  white-space: nowrap;
  max-width: 100%;
  overflow: hidden;
  text-overflow: ellipsis;
  font-size: clamp(1.8rem, 2.41vw + 1.32rem, 4.21rem);
}"
`;

exports[`getComponentCss() > should return correct css for size: "small", align: inherit, color: primary, ellipsis: false and theme: light 1`] = `
":host {
  display: block;
  color-scheme: light dark !important;
}
:host([hidden]) {
  display: none !important;
}
::slotted(:is(h1,h2,h3,h4,h5,h6)) {
  all: unset !important;
}
.root {
  margin: 0;
  padding: 0;
  font: normal normal 400 clamp(2.28rem, 5.2vw + 1.24rem, 7.48rem)/calc(6px + 2.125ex) 'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif;
  color: #010205;
  text-align: inherit;
  letter-spacing: normal;
  list-style-type: none;
  white-space: inherit;
  font-size: clamp(1.8rem, 2.41vw + 1.32rem, 4.21rem);
}"
`;

exports[`getComponentCss() > should return correct css for size: "small", align: start, color: inherit, ellipsis: false and theme: light 1`] = `
":host {
  display: block;
  color-scheme: light dark !important;
}
:host([hidden]) {
  display: none !important;
}
::slotted(:is(h1,h2,h3,h4,h5,h6)) {
  all: unset !important;
}
.root {
  margin: 0;
  padding: 0;
  font: normal normal 400 clamp(2.28rem, 5.2vw + 1.24rem, 7.48rem)/calc(6px + 2.125ex) 'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif;
  color: currentColor;
  text-align: start;
  letter-spacing: normal;
  list-style-type: none;
  white-space: inherit;
  font-size: clamp(1.8rem, 2.41vw + 1.32rem, 4.21rem);
}"
`;

exports[`getComponentCss() > should return correct css for size: {"base":"medium","xs":"large","s":"medium","m":"inherit","l":"large","xl":"medium"}, align: center, color: primary, ellipsis: true and theme: dark 1`] = `
":host {
  display: block;
  color-scheme: light dark !important;
}
:host([hidden]) {
  display: none !important;
}
::slotted(:is(h1,h2,h3,h4,h5,h6)) {
  all: unset !important;
}
.root {
  margin: 0;
  padding: 0;
  font: normal normal 400 clamp(2.28rem, 5.2vw + 1.24rem, 7.48rem)/calc(6px + 2.125ex) 'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif;
  color: #FBFCFF;
  text-align: center;
  letter-spacing: normal;
  list-style-type: none;
  white-space: nowrap;
  max-width: 100%;
  overflow: hidden;
  text-overflow: ellipsis;
  font-size: clamp(2.03rem, 3.58vw + 1.31rem, 5.61rem);
}
@media(min-width:480px) {
  .root {
    font-size: clamp(2.28rem, 5.2vw + 1.24rem, 7.48rem);
  }
}

@media(min-width:760px) {
  .root {
    font-size: clamp(2.03rem, 3.58vw + 1.31rem, 5.61rem);
  }
}

@media(min-width:1000px) {
  .root {
    font-size: inherit;
  }
}

@media(min-width:1300px) {
  .root {
    font-size: clamp(2.28rem, 5.2vw + 1.24rem, 7.48rem);
  }
}

@media(min-width:1760px) {
  .root {
    font-size: clamp(2.03rem, 3.58vw + 1.31rem, 5.61rem);
  }
}
"
`;
